# parse-1c-build

./: .gitignore  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: stop-commit-message.ps1
.cursor/rules/: auto-commit-message.mdc  bsl-forms.mdc  no-temp-in-project.mdc  pdm-package-manager.mdc  terminal-test-execution-policy.mdc  testing-workflow.mdc
.cursor/skills/parse-1c-build-architecture/: SKILL.md
.dev/: pyproject.toml
.github/workflows/: publish.yml
scripts/: test.ps1
src/parse_1c_build/: __about__.py  __main__.py  base.py  bsl.py  build.py  cli_runner.py  parse.py  process_utils.py
src/tests/: test_build.py  test_parse.py
src/tests/data/: test.epf
src/tests/data/test_epf_src/: ae674b1d-2cc3-4f76-9164-8bdd0308d489  faa87ad8-a8e9-4e88-8a2c-739a776cfad5.0  versions
tests/: test_base.py  test_bsl.py  test_build.py  test_parse.py
tests/data/: test.epf
tests/data/test_epf_src/: 00884b3a-f65e-4956-8e79-e69cfac8c10e  291dd673-354e-4b73-95a6-f8d62062fef1  291dd673-354e-4b73-95a6-f8d62062fef1.0  3a3209bb-e006-49cf-89f4-92fd41c3adf5  3a3209bb-e006-49cf-89f4-92fd41c3adf5.0  47291cc9-8ef9-4425-8d37-28bcf15b372d  47291cc9-8ef9-4425-8d37-28bcf15b372d.0  6f608c71-42bd-4706-83c3-eb12b66243aa  6f608c71-42bd-4706-83c3-eb12b66243aa.0  ae674b1d-2cc3-4f76-9164-8bdd0308d489  b927dca7-1b18-485c-bd09-ca251dda9948  b927dca7-1b18-485c-bd09-ca251dda9948.0  copyinfo  faa87ad8-a8e9-4e88-8a2c-739a776cfad5  faa87ad8-a8e9-4e88-8a2c-739a776cfad5.0  root  versions
tests/data/test_epf_src/00884b3a-f65e-4956-8e79-e69cfac8c10e.0/: form  module
(+1 files in other folders)
